# xmrig-block

./: .dir-locals.el  Cargo.toml  README.md
.vim/: coc-settings.json
xdp-log/: Cargo.toml
xdp-log-common/: Cargo.toml
xdp-log-common/src/: lib.rs
xdp-log-ebpf/: Cargo.toml
xdp-log-ebpf/src/: main.rs
xdp-log/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
